# genie-core

./: .gitignore  README.md  pyproject.toml
genie_core/: report.py  text.py
genie_core/audio/: compare.py  loader.py  srt.py  transcribe.py
genie_core/llm/: __init__.py  client.py  merge.py  parse.py
genie_core/pdf/: __init__.py  split.py
genie_core/video/: __init__.py  detect.py  screenshot.py
swift-cli/: Package.swift  install-proxy.sh
swift-cli/Sources/: main.swift
tests/: generate_advanced_fixtures.py  generate_fixtures.py
