[project]
name = "genie-core"
version = "0.1.0"
description = "Shared utilities for Genie: video processing, speech-to-text, PDF handling, LLM client"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
pdf = ["PyMuPDF>=1.23"]
mlx = ["mlx-whisper"]
whisper = ["openai-whisper"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["genie_core*"]
